<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewTitleOrder"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:text="@string/pests_list_sort"
        android:textStyle="bold"
        app:autoSizeTextType="uniform" />

    <RadioGroup
        android:id="@+id/radioGrouporderList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="0px"
        android:layout_marginTop="0px"
        android:layout_marginRight="0px"
        android:layout_marginBottom="10px"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonOrderListPopularName"
            android:layout_width="153dp"
            android:layout_height="wrap_content"
            android:onClick="clickRadioButtonOrderListByField"
            android:text="@string/pest_form_popular_name" />

        <RadioButton
            android:id="@+id/radioButtonOrderListScientificName"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:onClick="clickRadioButtonOrderListByField"
            android:text="@string/pest_form_scientific_name" />
    </RadioGroup>

</LinearLayout>